--- a/style.css
+++ b/style.css
@@ -125,9 +125,30 @@ h1 {
     font-style: normal;
   }
 
+h2 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+  color: #ffffff !important;
+}
+
+h3 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+    color: #ffffff !important;
+  }
+
 p {
     font-family: "Open Sans", sans-serif;
     font-weight: 300;
+    color: #ffffff;
+  }
+
+  li {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 500;
+    color: #ffffff;
   }
 
 html {
